--- a/Ropa_JANDM/index.html
+++ b/Ropa_JANDM/index.html
@@ -341,7 +341,7 @@
             var parametros = {
                 spr: "spInventarioAllWebSite"
             };
-            const tok = await fetch("http://jandm.somee.com/Api/api/sp/sqnt", {
+            const tok = await fetch("https://X-Mont.somee.com/Api/api/sp/sqnt", {
                 method: 'POST',
                 body: JSON.stringify(parametros),
                 headers: {
