--- a/XmontWebSite/index.html
+++ b/XmontWebSite/index.html
@@ -352,7 +352,7 @@
                     parametroResult: "6"
                 }]
             };
-            const tok = await fetch("https://X-Mont.somee.com/Naranjo/api/sp/sqnt", {
+            const tok = await fetch("https://X-Mont.somee.com/API/api/sp/sqnt", {
                 method: 'POST',
                 body: JSON.stringify(parametros),
                 headers: {
