--- a/Ropa_JANDM/index.html
+++ b/Ropa_JANDM/index.html
@@ -373,7 +373,7 @@
                         <div class="product-cart-wrap mb-30">\
                             <div class="product-img-action-wrap">\
                                 <div class="product-img product-img-zoom">\
-                                    <img onClick="abrirModal(\''+ datos.imagen + '\',\'' + Descripcion + '\',\'' + datos.PrecioFinal + '\')" class="default-img" src="' + datos.imagen + '" alt="">\
+                                    <img onerror="retryImageLoad(this,\''+ datos.imagen + '\')"  onClick="abrirModal(\''+ datos.imagen + '\',\'' + Descripcion + '\',\'' + datos.PrecioFinal + '\')" class="default-img" src="' + datos.imagen + '" alt="">\
                                 </div>\
                                 <div class="product-badges product-badges-position product-badges-mrg">\
                                     <span class="'+ color + '">' + datos.categoria + '</span>\
@@ -446,6 +446,27 @@
             $("#myModal").modal("toggle");
 
 
+        }
+
+        function retryImageLoad(img,URL) {
+            const maxRetries = 10;
+            let retries = 0;
+
+            function loadImg() {
+                img.src = URL;
+            }
+
+            img.onerror = function () {
+                if (retries < maxRetries) {
+                    retries++;
+                    loadImg();
+                } else {
+                    // Aquí puedes hacer algo si la imagen no carga después de varios intentos.
+                    console.log('No se pudo cargar la imagen después de varios intentos.'+URL);
+                }
+            };
+
+            loadImg(); // Inicia el primer intento de carga.
         }
 
     </script>
